# Utils

./: .gitignore  Makefile  README.md  Utils.7  defs.mk  vars.mk
.github/instructions/: review-c.instructions.md
.github/workflows/: btn_c.yml  btn_haskell.yml  btn_python.yml  c.yml  codeql.yml  cpp.yml  haskell.yml  hd_c.yml  hd_cpp.yml  hd_haskell.yml  hd_javascript.yml  hd_rust.yml  javascript.yml  nsy_c.yml  nsy_haskell.yml  nsy_python.yml  pr_c.yml  pr_cpp.yml  push_c.yml  (+11 more)
btn/: README.md  SPECIFICATION.md  btn.1  buntang.c  buntang.hs
common/: array.adt.c  fatal.c  fatal.h  fatal.internals.h  readline.c  readline.h  strutils.c  strutils.internals.h  utils.internals.h  wrappers.c  wrappers.h
hd/: .gitignore  README.md  SPECIFICATION.md  hd.1  hd.c  hd.rs  hd.test.js
hhss/: .gitignore  Makefile  README.md  SPECIFICATION.md  dat.db  hhss.1  hutsori.hs  rt.db
hhss/cpp/: .gitignore  CMakeLists.txt  Makefile  generator.h  hhss_cpp.h  random_formatting_map.cpp
lib/: array.adt.h  array.adt.internals.h  colorcodes.h  fatal.c  fatal.h  loadfile.c  loadfile.h  loadfile.internals.h  readline.c  readline.internals.h  strutils.c  strutils.h  strutils.internals.h  utils.c  utils.h  wrappers.c  wrappers.h  wrappers.internals.h
nsy/: .gitignore  Makefile  README.md  SPECIFICATION.md  noisy.c  noisy.hs  nsy.1  nsy.py
nsy2/: README.md  SPECIFICATION.md  nsy2.1
test/: .gitignore  DESIGN.md  Makefile  README.md  test.c  test.h  test.macros.h  test.typedef  test.types.h  test_maker.c  test_maker.h
yandere/: README.md  SPECIFICATION.md  yandere.1  yandere.c  yandere.hs
(+98 files in other folders)
